--- a/package.json
+++ b/package.json
@@ -6,7 +6,9 @@
   "main": "index.js",
   "scripts": {
     "build": "sass src/scss:dist/css",
-    "start": "sass --watch src/scss:dist/css & live-server"
+    "start": "sass --watch src/scss:dist/css & live-server",
+    "test": "node src/js/index.js",
+    "format": "prettier -w src/js/index.js"
   },
   "keywords": [],
   "author": "Noroff",
