--- a/package.json
+++ b/package.json
@@ -7,8 +7,8 @@
   "scripts": {
     "build": "sass src/scss:dist/css",
     "start": "sass --watch src/scss:dist/css & live-server",
-    "test": "node src/js/index.js",
-    "format": "prettier -w src/js/index.js"
+    "test": "node src/js/index.test.js",
+    "format": "prettier -w src/**/*.js"
   },
   "keywords": [],
   "author": "Noroff",
