--- a/package.json
+++ b/package.json
@@ -14,7 +14,9 @@
   "author": "Noroff",
   "license": "ISC",
   "devDependencies": {
+    "@eslint/js": "^8.57.0",
     "eslint": "^8.57.0",
+    "globals": "^15.6.0",
     "live-server": "^1.2.2",
     "prettier": "^3.3.2",
     "sass": "^1.54.8"
