--- a/package.json
+++ b/package.json
@@ -31,7 +31,13 @@
   },
   "lint-staged": {
     "*.js": [
-      "eslint --cache --fix",
+      "prettier --write",
+      "eslint --fix"
+    ],
+    "*.html": [
+      "prettier --write"
+    ],
+    "*.scss": [
       "prettier --write"
     ]
   }
