--- a/package.json
+++ b/package.json
@@ -7,7 +7,8 @@
   "scripts": {
     "build": "sass src/scss:dist/css",
     "start": "sass --watch src/scss:dist/css & live-server",
-    "test": "node src/js/index.test.js",
+    "test": "npm run test-unit",
+    "test-unit": "jest",
     "format": "prettier -w src/**/*.js",
     "lint": "eslint src/**/*.js",
     "lint-fix": "eslint src/**/*.js --cache --fix",
@@ -21,6 +22,7 @@
     "eslint": "^8.57.0",
     "globals": "^15.6.0",
     "husky": "^9.0.11",
+    "jest": "^29.2.0",
     "lint-staged": "^15.2.7",
     "live-server": "^1.2.2",
     "prettier": "^3.3.2",
