--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
   "devDependencies": {
     "@eslint/js": "^8.57.0",
     "eslint": "^8.57.0",
+    "eslint-plugin-jest": "^28.6.0",
     "globals": "^15.6.0",
     "husky": "^9.0.11",
     "jest": "^29.2.0",
