--- a/package.json
+++ b/package.json
@@ -21,7 +21,9 @@
     "@babel/core": "^7.19.3",
     "@babel/preset-env": "^7.19.4",
     "@eslint/js": "^8.57.0",
+    "cypress": "^13.12.0",
     "eslint": "^8.57.0",
+    "eslint-plugin-cypress": "^3.3.0",
     "eslint-plugin-jest": "^28.6.0",
     "globals": "^15.6.0",
     "husky": "^9.0.11",
