--- a/package.json
+++ b/package.json
@@ -9,6 +9,8 @@
     "start": "sass --watch src/scss:dist/css & live-server",
     "test": "npm run test-unit",
     "test-unit": "jest",
+    "test-2": "npm run test-e2e",
+    "test-e2e": "cypress open",
     "format": "prettier -w src/**/*.js",
     "lint": "eslint src/**/*.js",
     "lint-fix": "eslint src/**/*.js --cache --fix",
