--- a/package.json
+++ b/package.json
@@ -9,8 +9,10 @@
     "start": "sass --watch src/scss:dist/css & live-server",
     "test": "npm run test-unit",
     "test-unit": "jest",
-    "test-2": "npm run test-e2e",
+    "test-2": "npm run test-e2e-cli",
     "test-e2e": "cypress open",
+    "test-e2e-report": "cypress run --reporter mochawesome",
+    "test-e2e-cli": "cypress run",
     "format": "prettier -w src/**/*.js",
     "lint": "eslint src/**/*.js",
     "lint-fix": "eslint src/**/*.js --cache --fix",
